--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "GPL-3.0",
     "autoload": {
         "psr-4": {
-            "Laraxgram\\Laraquest\\": "src/"
+            "LaraGram\\Laraquest\\": "src/"
         }
     },
     "authors": [
